refactor(service): DashboardService cout쿼리, form(), 불필요한 주석 및 import 제거